@@ -33,7 +33,7 @@
         <dependency>
             <groupId>com.jfoenix</groupId>
             <artifactId>jfoenix</artifactId>
-            <version>9.0.10</version>
+            <version>9.0.0</version>
         </dependency>
         <dependency>
             <groupId>org.glassfish.web</groupId>
@@ -120,6 +120,17 @@
                 <configuration>
                     <source>19</source>
                     <target>19</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>0.0.8</version>
+                <configuration>
+                    <options>
+                        <option>--add-opens</option>
+                        <option>javafx.controls/javafx.scene.control.skin=com.jfoenix</option>
+                    </options>
                 </configuration>
             </plugin>
             <plugin>
